2007-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datum_set.cpp: Don't parse more datum shift parameters than
	we have space to store in datum_params[]. 

2006-11-02  Frank Warmerdam  <warmerdam@pobox.com>

	* src/rtodms.c: Fix computation of degree per bug described on the
	mailing list.

2006-10-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare for 4.5.0 final release.

2006-10-18  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: added polish zones (2172-2175) manually per request from
	Maciek on the mailing list.

	* Preparing 4.5.0 beta4 release.

2006-10-17  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_mdist.c, proj_rouss.c: Incorporated these from libproj4
	for http://bugzilla.remotesensing.org/show_bug.cgi?id=967.

	* nad/epsg: Regenerated from EPSG 6.11.1 with a few other
	fixes (datum shift values) from several bug reports.

2006-10-12  Frank Warmerdam  <warmerdam@pobox.com>

	* Added experimental +lon_wrap argument to set a "center point" for 
	longitude wrapping of longitude values coming out of pj_transform().

2006-10-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj.c,nad2nad.c,cs2cs.c: Increase MAX_LINE to 1000 per
	request from Dan Scheirer.

2006-10-01  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: added test target.

2006-09-23  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: upgraded to EPSG 6.11

2006-09-22  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: removed static "start" variable to resolve
	thread-safety problems (bug 1283).

2006-09-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Produce 4.5.0beta2 release.

	* src/PJ_krovak.c: Add +czech flag to apply non-useful sign reversal
	that someone once apparently thought was a good idea.  By default work
	like folks want.  Contributed by Martin Landa and Radim Blazek. 
	Bug 1133, and 147.

2006-07-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Added esri.extra and other.extra to distributed and installed files
	in nad/Makefile.am.
